[build-system]
requires = ["pybind11[global]>=2.10.0", "setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "og-rl-env"
version = "0.1.0"
description = "Overgrowth Reinforcement Learning Environment"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Wolfire Games LLC", email = "support@wolfire.com"}
]
maintainers = [
    {name = "Wolfire Games LLC", email = "support@wolfire.com"}
]
keywords = ["reinforcement learning", "game environment", "physics simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/WolfireGames/overgrowth"
Repository = "https://github.com/WolfireGames/overgrowth.git"
Issues = "https://github.com/WolfireGames/overgrowth/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__"]